@@ -1,4 +1,5 @@
 0.5.3:
+  - Fixed issue #70 (stricter client id validation).
 
 0.5.2:
   - Rework on examples.
